--- a/inherits.html
+++ b/inherits.html
@@ -119,7 +119,7 @@ $(function() {
 </td></tr>
 <tr><td><img src="inherit_graph_7.png" border="0" usemap="#autility__module_1_1formatter" alt=""/>
 <map name="autility__module_1_1formatter" id="autility__module_1_1formatter">
-<area shape="rect" href="d1/daf/classutility__module_1_1formatter.html" title=" " alt="" coords="5,5,192,32"/>
+<area shape="rect" href="d1/daf/classutility__module_1_1formatter.html" title="A utility class for string formatting." alt="" coords="5,5,192,32"/>
 </map>
 </td></tr>
 </table>
